# CreateCppProject

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
.scripts/: build.elv  build.sh  clone.py  clone.py.back  clone.sh  count_add_packages.py  end_project.cmake  install_xrepo.cmake  install_xrepo.py  install_xrepo.sh  pre_build.cmake  pre_functions.cmake  run.sh
src/: main.cpp
